test/programs/good/check-terms-precedence/list_element_followed_by_case.lq
fun :: Bit
fun = [x] !! 1 (case x of  
   a1 -> a2 
   b1 -> b2
)

