test/programs/bad/function_has_sum_arg__IncorrectNumberOfFunctionArguments.lq
fun :: ([Qbit] + [Qbit]) -> Bit
fun sum arg  = 1

main :: Bit
main = other
